# texture2d-decoder-rs

./: Cargo.toml
src/: lib.rs
texture2d-decoder-sys/: Cargo.toml  build.rs
texture2d-decoder-sys/Texture2DDecoderNative/crunch/: crn_decomp.h
